# my-njord

./: .pre-commit-config.yaml  pyproject.toml
docs/PRP/: 000-system-overview.prp.md  001-billing-engine.prp.md  002-resource-models.prp.md  003-invoice-api.prp.md  004-resource-api.prp.md  005-pricing-api.prp.md
docs/PRP/resources/: _resource-template.prp.md  storage-hotel.prp.md  virtual-machine.prp.md
