[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "invoice-project"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2,<6.0",
    "djangorestframework>=3.15",
    "django-filter>=24.0",
    "drf-spectacular[sidecar]>=0.27",
    "psycopg[binary]>=3.1.12",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11",
    "mypy>=1.10",
    "django-stubs>=5.2",
    "djangorestframework-stubs>=3.15",
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-cov>=5.0",
    "django-extensions>=4.1",
    "pre-commit>=3.7",
]

quality = [
    "django-doctor>=2.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "config*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.dev"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
plugins = [
    "mypy_django_plugin.main",
    "mypy_drf_plugin.main",
]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "*.migrations.*",
]
ignore_errors = true

[tool.django-stubs]
django_settings_module = "config.settings.dev"

